<resources>
    <string name="app_name">malaria_app</string>
    <string name="malaria_cnn">Malaria CNN</string>
    <string name="todo">TODO</string>
    <string name="database">Database</string>
    <string name="new_scan">New Scan</string>
    <string name="patient_info">Patient Info</string>
    <string name="test_patient">Test Patient</string>
    <string name="database">Database</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="id">ID</string>
    <string name="gender">Gender</string>
    <string name="next">Next</string>
    <string name="initials">Initials</string>
    <string name="age">Age</string>
</resources>